# cveda

cveda/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
cveda/.github/workflows/: ci.yml  release.yml
cveda/src/cveda/: __init__.py  annotations.py  api.py  cli.py  data_io.py  image_quality.py  ingest.py  inspect.py  schema.py  segmentation.py  split_generator.py
cveda/src/cveda/checks/: __init__.py  bbox_sanity.py  category_consistency.py  completeness.py  coverage.py  hard_negative.py  overlap.py  splits.py  summary.py
cveda/src/cveda/distribution/: __init__.py  aspect_ratio.py  bbox_statistics.py  class_distribution.py  cooccurrence.py  spatial_heatmap.py
cveda/src/cveda/features/: absolute_coordinate_patterns.py  annotation_confidence.py  annotation_lifespan_drift.py  annotation_rarity_buckets.py  background_relevance.py  bbox_border_alignment.py  camera_diversity.py  color_cast_detection.py  compression_anomaly.py  containment_detection.py  duplicate_annotation_ids.py  environment_diversity.py  geographic_clustering.py  heirarchy_validation.py  illumination_diversity.py  inter_annotator_disagreement.py  metadata_drift.py  mislabel_candidate_generator.py  multiresolution_similarity.py  mutual_exclusion.py  noise_type_classifier.py  object_alignment_patterns.py  object_distance_distribution.py  (+17 more)
cveda/tests/: test_annotations.py  test_api.py  test_checks_bbox.py  test_distribution.py  test_features.py  test_ingest_coco.py  test_ingest_mask_folder.py  test_ingest_yolo.py  test_inspect.py  test_pdf_reports.py  test_report.py
(+51 files in other folders)
