[metadata]
name = cveda
version = 0.1.0
description = "Lightweight EDA utilities for computer vision datasets"
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    pandas
    opencv-python
    pillow
    scikit-learn
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cveda_cli = cveda.cli:main
